# docs/swagger.json
@@ -12,6 +12,19 @@
     "paths": {
         "/book": {
             "get": {
+                "summary": "List of Books",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "name": "count",
+                        "in": "query"
+                    },
+                    {
+                        "type": "string",
+                        "name": "page",
+                        "in": "query"
+                    }
+                ],
                 "responses": {
                     "200": {
                         "description": "OK",
@@ -30,12 +43,37 @@
                 "parameters": [
                     {
                         "description": "the request body",
-                        "name": "req",
+                        "name": "body",
                         "in": "body",
                         "required": true,
                         "schema": {
                             "$ref": "#/definitions/dto_book.Create"
                         }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/dto_book.Full"
+                        }
+                    }
+                }
+            }
+        },
+        "/book/{id}": {
+            "get": {
+                "consumes": [
+                    "application/json"
+                ],
+                "summary": "Single Book",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "url params",
+                        "name": "id",
+                        "in": "path",
+                        "required": true
                     }
                 ],
                 "responses": {
@@ -81,6 +119,17 @@
                     "type": "integer"
                 },
                 "updated_at": {
+                    "type": "string"
+                }
+            }
+        },
+        "dto_book.List": {
+            "type": "object",
+            "properties": {
+                "count": {
+                    "type": "string"
+                },
+                "page": {
                     "type": "string"
                 }
             }
